# Projects_cpp

./: .clang-format  README.md
OpenCV_Color_Previewer/: .clang-format  CMakeLists.txt  main.cpp
OpenCV_Color_Previewer/include/: color_previewer.hpp
OpenCV_Color_Previewer/src/: color_previewer.hpp  color_processing.hpp  examples.hpp  main.cpp
OpenCV_color_screening_visualization/: CMakeLists.txt  main.cpp
OpenCV_color_screening_visualization/src/: color_previewer.hpp  color_processing.hpp  examples.hpp  image_processing.hpp
Pid_Controller/: CMakeLists.txt  main.cpp
Pid_Controller/src/: pid_calculator.hpp
Port_IO/: CMakeLists.txt  main.cpp
Port_IO/src/: client.cpp  server.cpp
ROS2_experiments/ROS2_publisher/: CMakeLists.txt  package.xml
ROS2_experiments/ROS2_publisher/src/: publisher.cpp
ROS2_experiments/ROS2_subscriber/: CMakeLists.txt  package.xml
ROS2_experiments/ROS2_subscriber/src/: subscriber.cpp
