<package format="3">
  <name>parameter_subscriber</name>
  <version>0.1.0</version>
  <description>The param_receiver package</description>
  <maintainer email="floatpigeon@proton.me">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>

</package>
